force-app/main/default/objects/Conga_batch_setting__c/Conga_batch_setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom conga batch setting to store Report Date, Payout Date, Email body and conga template query selector</description>
    <label>Conga batch setting</label>
</CustomObject>