force-app/main/default/objects/Conga_batch_setting__c/fields/Business_Unit_Lawfirm_Summary__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Lawfirm_Summary__c</fullName>
    <label>Business Unit Lawfirm Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>