force-app/main/default/objects/Conga_batch_setting__c/fields/Business_Unit_Lawyer_Summary__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Lawyer_Summary__c</fullName>
    <label>Business Unit Lawyer Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>