force-app/main/default/objects/Conga_batch_setting__c/fields/Conductor_Id_Lawyer_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>Conductor_Id_Lawyer_Summary_Report__c</fullName>
    <label>Conductor Id Lawyer Summary Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>