force-app/main/default/objects/Conga_batch_setting__c/fields/Email_Additional_Notes_Law_Firm_Report__c.field-meta.xml
<CustomField>
    <fullName>Email_Additional_Notes_Law_Firm_Report__c</fullName>
    <label>Email Additional Notes Law Firm Report</label>
    <type>TextArea</type>
</CustomField>