force-app/main/default/objects/Conga_batch_setting__c/fields/Email_Additional_Notes_Lawyer_Summary__c.field-meta.xml
<CustomField>
    <fullName>Email_Additional_Notes_Lawyer_Summary__c</fullName>
    <label>Email Additional Notes Lawyer Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>