force-app/main/default/objects/Conga_batch_setting__c/fields/Email_To_Id_Law_Firm_Summary__c.field-meta.xml
<CustomField>
    <fullName>Email_To_Id_Law_Firm_Summary__c</fullName>
    <label>Email To Id Law Firm Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>