force-app/main/default/objects/Conga_batch_setting__c/fields/Payout_Date_Law_Firm_Report__c.field-meta.xml
<CustomField>
    <fullName>Payout_Date_Law_Firm_Report__c</fullName>
    <label>Payout Date Law Firm Report</label>
    <type>Date</type>
</CustomField>