force-app/main/default/objects/Conga_batch_setting__c/fields/Query_Selector_Law_Firm_Report__c.field-meta.xml
<CustomField>
    <fullName>Query_Selector_Law_Firm_Report__c</fullName>
    <description>Will be used to select Query Id for conga template to send law firm report summary.</description>
    <label>Query Selector Law Firm Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>