force-app/main/default/objects/Conga_batch_setting__c/fields/Query_Selector_Lawyer_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>Query_Selector_Lawyer_Summary_Report__c</fullName>
    <description>Will be used to select Query Id for conga template to send lawyer summary.</description>
    <label>Query Selector Lawyer Summary Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>