force-app/main/default/objects/Conga_batch_setting__c/fields/Report_Date_Lawyer_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>Report_Date_Lawyer_Summary_Report__c</fullName>
    <label>Report Date Lawyer Summary Report</label>
    <type>Date</type>
</CustomField>