force-app/main/default/objects/Conga_batch_setting__c/fields/Test_Recipient_of_Lawyer_Summary__c.field-meta.xml
<CustomField>
    <fullName>Test_Recipient_of_Lawyer_Summary__c</fullName>
    <description>This field is used in a formula field on contact to include the conga parameters to send emails. if this field is empty then it means email will go to respective contacts. but meanwhile testing DO NOT remove the id of this field so that emails keep going to test contact.</description>
    <label>Test Recipient of Lawyer Summary</label>
    <length>18</length>
    <type>Text</type>
</CustomField>